modification des commentaires

--- a/public/articles/content/setupSparkStandalone.mdx
+++ b/public/articles/content/setupSparkStandalone.mdx
@@ -1,31 +1,33 @@
-
 # How to Set Up Spark in Standalone Mode
 
 <Image src="https://datascientest.com/wp-content/uploads/2021/08/illu_apache_spark-28.png" alt="Installing Apache Spark" />
 
-Apache Spark is a fast, general-purpose cluster-computing system designed for high-performance big data processing. It’s ideal for handling massive datasets by performing computations in memory. When running in standalone mode, Spark operates on a single machine or a few machines, making it suitable for development and smaller-scale deployments.
+<Paragraph>Apache Spark is a fast, general-purpose cluster-computing system designed for 
+high-performance big data processing. It’s ideal for handling massive datasets by performing computations in memory. 
+When running in standalone mode, Spark operates on a single machine or a few machines, making it suitable for development 
+and smaller-scale deployments.</Paragraph>
 
-If you're new to Apache Spark, check out this [overview of Spark](https://spark.apache.org/downloads.html).
+<Paragraph>If you're new to Apache Spark, check out this <a href="https://spark.apache.org/downloads.html">overview of Spark</a>.</Paragraph>
 
 ## Spark Setup for Your Data Engineers
 
-In this example, we assume your company has a limited infrastructure, and you need to set up a Spark cluster for your data engineers to process large-scale data. 
+<Paragraph>In this example, we assume your company has a limited infrastructure, and you need to set up a Spark cluster for your data engineers to process large-scale data.</Paragraph>
 
-For our setup, we only have three VMs, which will be designated as `worker1`, `worker2`, and `master`.
+<Paragraph>For our setup, we only have three VMs, which will be designated as `worker1`, `worker2`, and `master`.</Paragraph>
 
 ### VM Setup with Virt-Manager
 
-Using Virt-Manager, I created three VMs with the following configurations:
+<Paragraph>Using Virt-Manager, I created three VMs with the following configurations:</Paragraph>
 
 <Image src="https://i.postimg.cc/Ghzj6tGj/setup-Spark-Standalone-virt-manager.png" alt="Spark VMs" />
 
-- **Worker Nodes**: 50 GB of RAM each.
-- **Master Node**: 25 GB of RAM.
-- Each VM has a unique IP address.
+<Paragraph>- **Worker Nodes**: 50 GB of RAM each.</Paragraph>
+<Paragraph>- **Master Node**: 25 GB of RAM.</Paragraph>
+<Paragraph>- Each VM has a unique IP address.</Paragraph>
 
 ### Spark Installation Process
 
-We’ll download Spark from the official Apache archives. I chose Spark version 3.4.1:
+<Paragraph>We’ll download Spark from the official Apache archives. I chose Spark version 3.4.1:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -33,7 +35,7 @@ wget https://archive.apache.org/dist/spark/spark-3.4.1/spark-3.4.1-bin-hadoop3.t
 ```
 </CodeBlock>
 
-Then, unpack the `.tgz` file and move it to `/opt/spark/`:
+<Paragraph>Then, unpack the `.tgz` file and move it to `/opt/spark/`:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -42,7 +44,7 @@ sudo mv spark-3.4.1-bin-hadoop /opt/spark/
 ```
 </CodeBlock>
 
-Next, set up the environment variables:
+<Paragraph>Next, set up the environment variables:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -53,7 +55,7 @@ export PATH=$PATH:$SPARK_HOME/bin:$SPARK_HOME/sbin
 
 ### Installing Java
 
-Apache Spark requires Java to run. For version 3.4.1, Java 8, 11, or 17 is compatible. Here, we install OpenJDK 11:
+<Paragraph>Apache Spark requires Java to run. For version 3.4.1, Java 8, 11, or 17 is compatible. Here, we install OpenJDK 11:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -61,7 +63,7 @@ sudo apt install openjdk-11-jdk
 ```
 </CodeBlock>
 
-Then, set up Java environment variables:
+<Paragraph>Then, set up Java environment variables:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -72,7 +74,7 @@ export PATH=$JAVA_HOME/bin:$PATH
 
 ### Modifying `/etc/hosts`
 
-To ensure proper communication between the nodes, modify the `/etc/hosts` file to map the IP addresses of the master and worker nodes.
+<Paragraph>To ensure proper communication between the nodes, modify the `/etc/hosts` file to map the IP addresses of the master and worker nodes.</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -80,7 +82,7 @@ sudo nano /etc/hosts
 ```
 </CodeBlock>
 
-Add the following lines:
+<Paragraph>Add the following lines:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -92,7 +94,7 @@ Add the following lines:
 
 ### Configuring Spark
 
-Now, navigate to the Spark configuration directory and move the template files to active configurations:
+<Paragraph>Now, navigate to the Spark configuration directory and move the template files to active configurations:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -102,7 +104,7 @@ mv workers.template workers
 ```
 </CodeBlock>
 
-In the `spark-env.sh` file, set the master node’s IP:
+<Paragraph>In the `spark-env.sh` file, set the master node’s IP:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -110,7 +112,7 @@ SPARK_MASTER_HOST=192.168.122.71
 ```
 </CodeBlock>
 
-In the `workers` file, add the worker node labels (as defined in `/etc/hosts`):
+<Paragraph>In the `workers` file, add the worker node labels (as defined in `/etc/hosts`):</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -121,7 +123,7 @@ worker_2_node
 
 ### Starting the Cluster
 
-Once the configurations are done, start the cluster:
+<Paragraph>Once the configurations are done, start the cluster:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -129,7 +131,7 @@ Once the configurations are done, start the cluster:
 ```
 </CodeBlock>
 
-You can monitor the logs of the master node here:
+<Paragraph>You can monitor the logs of the master node here:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -139,15 +141,15 @@ cd /opt/spark/logs/
 
 ### Verifying the Spark UI
 
-If everything has gone smoothly, the logs will show that the Spark UI is accessible on the master node’s IP address. You should see a page like this:
+<Paragraph>If everything has gone smoothly, the logs will show that the Spark UI is accessible on the master node’s IP address. You should see a page like this:</Paragraph>
 
 <Image src="https://i.postimg.cc/xTJwGHz4/Capture-d-cran-2025-02-06-114825.png" alt="Spark UI" />
 
 ### Running a Spark Job
 
-To test the cluster, submit a Spark job using the `spark-submit` command. This will execute the job on the cluster.
+<Paragraph>To test the cluster, submit a Spark job using the `spark-submit` command. This will execute the job on the cluster.</Paragraph>
 
-Here’s a basic example of submitting a Spark job written in Python:
+<Paragraph>Here’s a basic example of submitting a Spark job written in Python:</Paragraph>
 
 <CodeBlock language="bash">
 ```
@@ -157,81 +159,18 @@ spark-submit --master spark://192.168.122.71:7077 my_spark_app.py
 
 ### Why Choose Apache Spark?
 
-Apache Spark offers a lot of advantages, including:
+<Paragraph>Apache Spark offers a lot of advantages, including:</Paragraph>
 
-- **Speed**: Spark is much faster than Hadoop for most data processing workloads.
-- **Scalability**: Spark can scale from a single machine to a large cluster with ease.
-- **Versatility**: Spark supports a variety of data processing tasks, such as batch processing, stream processing, machine learning, and SQL queries.
+<Paragraph>- **Speed**: Spark is much faster than Hadoop for most data processing workloads.</Paragraph>
+<Paragraph>- **Scalability**: Spark can scale from a single machine to a large cluster with ease.</Paragraph>
+<Paragraph>- **Versatility**: Spark supports a variety of data processing tasks, such as batch processing, stream processing, machine learning, and SQL queries.</Paragraph>
 
 <Image src="https://www.example.com/spark-advantages.png" alt="Advantages of Apache Spark" />
 
-## Step 1: Installing Apache Spark
-
-The first step is to install Apache Spark. Follow these steps:
-
-1. **Install Java**: Apache Spark requires Java 8 or higher. Download and install the Java Development Kit (JDK) from the official [Oracle website](https://www.oracle.com/java/technologies/javase-jdk11-downloads.html).
-
-2. **Download Apache Spark**: Visit the [official Apache Spark website](https://spark.apache.org/downloads.html) and download the latest version of Spark.
-
-3. **Set Environment Variables**: Make sure you set the `SPARK_HOME` environment variable to the folder where you installed Spark.
-
-<CodeBlock language="bash">
-```
-export SPARK_HOME=/path/to/spark
-export PATH=$PATH:$SPARK_HOME/bin
-```
-</CodeBlock>
-
-<Image src="https://www.example.com/spark-installation.png" alt="Installing Apache Spark" />
-
-## Step 2: Starting Spark in Local Mode
-
-Once you've installed Spark, you can run it in local mode for development and testing. This is done by running the `spark-shell`:
-
-<CodeBlock language="bash">
-```
-spark-shell
-```
-</CodeBlock>
-
-This will launch the Spark shell, where you can run Spark commands interactively. Here’s a simple Spark command to read a text file and count the words:
-
-<CodeBlock language="scala">
-```
-val textFile = sc.textFile("path/to/textfile.txt")
-val wordCount = textFile.flatMap(line => line.split(" ")).countByValue()
-wordCount.foreach(println)
-```
-</CodeBlock>
-
-<Image src="https://www.example.com/spark-shell.png" alt="Running Spark Shell" />
-
-## Step 3: Running Spark on a Cluster
-
-For production environments, you’ll want to run Spark on a cluster. Spark supports various cluster managers like **YARN**, **Mesos**, and **Kubernetes**. Here's how to run Spark on YARN:
-
-<CodeBlock language="bash">
-```
-spark-submit --master yarn --deploy-mode cluster --class com.example.MyApp myapp.jar
-```
-</CodeBlock>
-
-This will submit your Spark job to the YARN cluster. Spark will handle the resource management and task scheduling for you.
-
-<Image src="https://www.example.com/spark-cluster.png" alt="Running Spark on YARN Cluster" />
-
-## Step 4: Visualizing Data with Spark
-
-Once you’ve processed your data, you can visualize the results. Spark integrates well with popular visualization libraries like **Matplotlib** in Python. Here's a sample Python code to plot the results:
-
-<Image src="https://www.example.com/spark-visualization.png" alt="Spark Data Visualization" />
-
 ## Conclusion
 
-Apache Spark is a powerful tool for big data processing. With the steps outlined in this guide, you should now be able to install and set up Spark, process your data, and even visualize the results.
+<Paragraph>Apache Spark is a powerful tool for big data processing. With the steps outlined in this guide, you should now be able to install and set up Spark, process your data, and even visualize the results.</Paragraph>
 
-Spark can handle a wide variety of workloads, and with its support for distributed computing, you can scale your data processing pipelines to handle petabytes of data.
+<Paragraph>Spark can handle a wide variety of workloads, and with its support for distributed computing, you can scale your data processing pipelines to handle petabytes of data.</Paragraph>
 
 <Image src="https://www.example.com/spark-conclusion.png" alt="Conclusion on Apache Spark" />
-
----
